Cropped ShotView images, minor layout fixes

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -64,7 +64,7 @@ $monospaced: "Geist Mono",
   Liberation Mono,
   monospace;
 
-$line-height-body: 150%;
+$line-height-body: 160%;
 $line-height-display: 120%;
 
 $h1-size: 56px;
